--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+
 body{
     width: 100%;
     height: auto;
@@ -13,6 +14,9 @@ body{
     justify-content: space-between;
     padding: 10px 50px;
     align-items: center;
+    width: 100%;
+    /* min-width: 1000px; */
+    border: red 1px solid;
 }
 
 .cart-logo{
@@ -27,7 +31,9 @@ body{
 
 .container{
     background-image: url("/assets/kw-background.png");
-    width: 100%;
+    /* width:100%; */
+    /* max-width: 1000px; */
+    min-width: 1080px;
     height: 60vh;
     background-repeat: no-repeat;
     background-size: cover;
@@ -54,10 +60,12 @@ body{
 }
 
 .book-1{
-    width: fit-content;
+    /* width: fit-content; */
+    max-width: 200px;
     line-height: 6px;
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
+    flex-wrap: wrap;
 }
 
 .book-1 img{
@@ -95,7 +103,7 @@ body{
 }
 
 .game-1{
-    width: fit-content;
+    max-width: 300px;
     line-height: 6px;
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
@@ -136,4 +144,15 @@ footer{
     display: inline;
     text-align: end;
     padding: 30px 40px;
+}
+
+@media (width <= 600px) {
+    body{
+        background-color: aquamarine;
+        
+    }
+    .navigation{
+       
+    }
+    
 }
