--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 body{
     width: 100%;
     height: auto;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     overflow-x: hidden;
 }
@@ -12,11 +12,11 @@ body{
 .navigation{
     display: flex;
     justify-content: space-between;
-    padding: 10px 50px;
+    /* padding: 10px 50px; */
     align-items: center;
-    width: 100%;
+    max-width: 100%;
     /* min-width: 1000px; */
-    border: red 1px solid;
+
 }
 
 .cart-logo{
@@ -31,32 +31,37 @@ body{
 
 .container{
     background-image: url("./assets/kw-background.png");
-    /* width:100%; */
-    /* max-width: 1000px; */
-    min-width: 1080px;
+    background-size: 100% 100%;
+    min-height: 500px;
+    min-width: 100%;
+    display: inline-block;
+    /* min-width: 1080px;
     height: 60vh;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; */
 }
 
 .hash{
     position: relative;
-    left: 100px;
-    top: 30px;
+    /* left: 100px;
+    top: 30px; */
     color: #fff;
     line-height: 30px;
     padding-top:30px ; 
-    font-size: 30px;
+    font-size: 2em;
+    padding-left: 2rem;
 }
 
 .content {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-bottom: 230px;
 }
 
 .all{
     margin: 200px 80px 80px 80px;
+    max-width: 200em;
 }
 
 .book-1{
@@ -111,6 +116,7 @@ body{
 
 .new-games{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -138,6 +144,7 @@ footer{
     align-items: center;
     padding: 0 0 0 40px;
     height: 200px;
+    min-width: 100%;
 }
 
 .krishti{
@@ -146,4 +153,24 @@ footer{
     padding: 30px 40px;
 }
 
+
+@media (max-width:600px){
+body{
+    /* background-color: green; */
+    text-align: left;
+}
+
+    .content , .new-games{
+        display: inline-block;
+        /* border: 5px greenyellow solid; */
+    }
+    .all{
+        text-align: center;
+    }
+
+    .container{
+        /* border: 2px yellowgreen solid; */
+        display: flex;
+    }
+}
 
